syntax = "proto3";

option java_multiple_files = true;
option java_package = "hr.fer.tel.rassus.examples";

package hr.fer.tel.rassus.client.grpc;

service Reading {
  rpc RequestReading (ReadingRequest) returns (ReadingResponse) {}
}

message ReadingRequest {
  int64 id = 1;
}

message ReadingResponse {
  double temperature = 1;
  double pressure = 2;
  double humidity = 3;
  double co = 4;
  double no2 = 5;
  double so2 = 6;
}
